@@ -12,7 +12,9 @@ import net.minecraft.nbt.CompoundTag;
 import net.minecraft.world.entity.Entity;
 import net.minecraft.world.level.block.entity.BlockEntity;
 import net.minecraft.world.level.levelgen.structure.templatesystem.StructureTemplate.StructureBlockInfo;
+import rbasamoyai.createbigcannons.CBCClientCommon;
 import rbasamoyai.createbigcannons.cannon_control.contraption.PitchOrientedContraptionEntity;
+import rbasamoyai.createbigcannons.cannon_control.effects.ShakeEffect;
 
 public class CBCClientHandlers {
 
@@ -57,6 +59,11 @@ public class CBCClientHandlers {
 		if (entity == null) return;
 
 		entity.lerpTo(entity.getX(), entity.getY(), entity.getZ(), pkt.yRot(), pkt.xRot(), 3, false);
+	}
+
+	public static void addShakeEffect(ClientboundAddShakeEffectPacket pkt) {
+		Minecraft mc = Minecraft.getInstance();
+		if (mc.player != null) CBCClientCommon.addShakeEffect(new ShakeEffect(pkt.seed(), pkt.time(), pkt.magnitude()));
 	}
 
 }
