@@ -5,11 +5,13 @@ import io.github.fabricators_of_create.porting_lib.event.client.*;
 import net.fabricmc.api.ClientModInitializer;
 import net.fabricmc.fabric.api.client.event.lifecycle.v1.ClientTickEvents;
 import net.fabricmc.fabric.api.client.keybinding.v1.KeyBindingHelper;
+import net.fabricmc.fabric.api.client.networking.v1.ClientLoginConnectionEvents;
 import net.fabricmc.fabric.api.client.screen.v1.ScreenEvents;
 import net.minecraft.client.Camera;
 import net.minecraft.client.KeyMapping;
 import net.minecraft.client.Minecraft;
 import net.minecraft.client.gui.screens.Screen;
+import net.minecraft.client.multiplayer.ClientHandshakePacketListenerImpl;
 import net.minecraft.client.player.AbstractClientPlayer;
 import net.minecraft.client.renderer.MultiBufferSource;
 import net.minecraft.client.renderer.entity.LivingEntityRenderer;
@@ -42,6 +44,7 @@ public class CBCClientFabric implements ClientModInitializer {
 		LivingEntityRenderEvents.PRE.register(CBCClientFabric::onBeforeRender);
 		TextureStitchCallback.PRE.register(CBCClientFabric::onTextureAtlasStitchPre);
 		CameraSetupCallback.EVENT.register(CBCClientFabric::onSetupCamera);
+		ClientLoginConnectionEvents.DISCONNECT.register(CBCClientFabric::onPlayerLogOut);
 	}
 
 	public static void onParticleRegistry() {
@@ -111,8 +114,12 @@ public class CBCClientFabric implements ClientModInitializer {
 	}
 
 	public static boolean onSetupCamera(CameraSetupCallback.CameraInfo info) {
-		return CBCClientCommon.onCameraSetup(info.camera, info.partialTicks, info.yaw, info.pitch, info.roll,
+		return CBCClientCommon.onCameraSetup(info.camera, info.partialTicks, () -> info.yaw, () -> info.pitch, () -> info.roll,
 			y -> info.yaw = y, p -> info.pitch = p, r -> info.roll = r);
+	}
+
+	public static void onPlayerLogOut(ClientHandshakePacketListenerImpl impl, Minecraft client) {
+		CBCClientCommon.onPlayerLogOut(client.player);
 	}
 
 }
